fix: letter spacing added to app

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -39,4 +39,5 @@ body {
 #root {
   height: 100%;
   user-select: none;
+  letter-spacing: 0.5px;
 }
